fix: read inline images from local disk instead of HTTP
Replace HTTP download approach with local file system access to fix
'Connection refused' error when running inside MeterSphere container.

- Use getRealMdFile() from parent class to read from local disk
- Add encodeFileToBase64() helper method
- Remove unused downloadImageAsBase64() method